assets/styles/_variable.scss
$primary: #8405FF;
$primary: #8405FF;
$primary-1: #4B0AAA;
$secondary: #C182FF;

$white: #fff;
$white-1 : #E1E1E1;
$white-2: #E5E4F7;
$white-3:  #B9B9BA;
$white-4: #CCC6D2;
$white-5: #7C7C7C;
$white-6: #F0F0FF;

$gray-100: #f8f8fc;
$gray-200: #f1f5fa;
$gray-300: #eaf0f9;
$gray-400: #b6c2e4;
$gray-500: #8997bd;
$gray-600: #7081b9;
$gray-700: #303e67;
$gray-800: #2c3652;
$gray-900: #1d2c48;

$black: #26282D;
$black-1 : #070708;
$black-2 : #161617;
$black-3 : #252526;
$black-4 : #111113;
$black-5 : #333336;
$black-6 : #3D3D3F;
$black-7 : #0D0D0C;
$black-8 : #8B8B8D;
$black-9 : #1D1D1E;
$black-10 : #646465;
// Define dark color classes
@each $number in 1, 2, 3, 4, 5, 6, 7, 8 {
    $color: map-get((1: $black-1, 2: $black-2, 3: $black-3, 4: $black-4, 5: $black-5, 6: $black-6, 7: $black-7, 8: $black-8), $number);
    .bg-dark-#{$number} {
        background-color: $color;
    }
}
$green: #03DABA;
$green-1: #BFE1B0;

$blue: #1761FD;
$indigo: #8405FF;
$indigo-1 : #1B0229;
$purple: #9F9DFF;
$pink: #FD3C97;
$red: #E36065;
$orange: #FCB37C;
$yellow: #FCE07C;
$teal: #03D87F;
$cyan: #60C5FE;
$light-cyan: #E6F6F6;

$primary: $primary;
$secondary: $secondary;
$success: $green;
$info: $cyan;
$warning: $yellow;
$danger: $red;
$light: $gray-100;
$dark: $gray-900;


// purples
$purple-1: #382369;
$purple-2: #FBC7F4;
$purple-3: #9580EE;
$purple-4: linear-gradient(160.34deg, rgba(130, 0, 255, 0.12) 5.3%, rgba(130, 0, 255, 0) 75.43%), #201838;
$purple-5: #362762;
$purple-6: #6113BC;
$purple-7: #1A1223;
$purple-8: #EEEDFF;
$purple-9: 0px 12.972px 39.7269px rgba(90, 0, 176, 0.1);
$purple-10: #150E1C;
$purple-11: #332C3B;
$purple-12: #432A71;
$purple-13: #e5e4f7;
$purple-14: #8e20f9;
$purple-15: #9237fb;
$purple-16: #281A35;
$purple-17: #F5F5FF;
$purple-18: #7E719F;
$purple-19: conic-gradient(from 90deg at 50% 50%, #BE79FF 0deg, #7136F6 360deg);
$purple-20: #291E39;
$purple-21: #A42DCD;
$purple-22: #FCF7FE;
$purple-23: #EDE8F3;
$purple-24: #15023F;
$purple-26: #DCCDEB;
$purple-27: #8200FF;
$purple-28: #2D313E;
$purple-29: #F1F5FF;
$purple-30: rgba(255, 255, 255, 0.1);
$purple-31: #2A1940;
$purple-32: #CFCEFF;
$purple-33: #110221;
$purple-34: #10051F;
$purple-35: #736BCD;
$purple-36: #9CA1DE;
$purple-37: #A396FF;
$purple-38: #7078EF;
$purple-39: #817CFF;

$theme-colors: (
    "primary": $primary,
    "secondary": $secondary,
    "success": $success,
    "info": $info,
    "warning": $warning,
    "danger": $danger,
    "light": $light,
    "dark": $dark,
    "indigo": $indigo,
    "purple": $purple,
    "pink": $pink,
    "orange": $orange,
    "teal": $teal,
);

$font-family-sans-serif: "Public Sans", sans-serif;
$font-family-monospace: "Source Code Pro", monospace;

$font-size-base: 1rem;
$font-size-xs: $font-size-base * .75;
$font-size-sm: $font-size-base * .875;
$font-size-md : $font-size-base * 1;
$font-size-lg: $font-size-base * 1.25;
$font-size-xl: $font-size-base * 1.375;
$font-size-2xl : $font-size-base * 2.188;
$font-size-3xl : $font-size-base * 3;
$font-size-4xl : $font-size-base * 3.75;


$h1-font-size: $font-size-base * 3.375;
$h2-font-size: $font-size-base * 2.5;
$h3-font-size: $font-size-base * 2;
$h4-font-size: $font-size-base * 1.375;
$h5-font-size: $font-size-base * 1.25;
$h6-font-size: $font-size-base * 1.125;

$body-color: $black;
$body-tertiary-color: #FFFFFF;
$body-tertiary-bg: #785EEA;

$link-color: $purple-35;
$link-decoration: none;

// button
$btn-font-size-lg: 18px;

// grid
$grid-gutter-width: 1.75rem;

// border
$border-radius: .25rem;
$border-radius-sm: .125rem;
$border-radius-lg: .5rem;
$container-border: 1px solid rgba(255, 255, 255, 0.10);
$block-border: 1px solid $black-3;
$btn-dark-border: 1px solid rgba(255, 255, 255, 0.12);

//margin
$popper-margin: .2rem;

// shadow
$box-shadow: 0 .75rem .75rem rgba(#DCE0F9, .5);
$box-shadow-sm: 0 0.375rem 0.375rem rgba(#DCE0F9, .5);
$box-shadow-lg: 0 1.5rem 1.5rem rgba(#DCE0F9, .5);


// nav
$nav-pills-border-radius: 50rem;
$menu-dropdown-bg: rgba(45, 45, 46, 0.93);
$menu-bg: rgb(17 17 19 / 65%);
$menu-backdrop-filter: blur(0.625rem);

// accordiion
$accordion-icon-color: $white;
$accordion-icon-active-color: $white;

$enable-reduced-motion: false;
$min-contrast-ratio: 2.5;

$baseline-max-width: 730px;
$container-max-width: 760px;
$width-800: 800px;

$rem-1: 1rem;
$rem-2: 2rem;
$rem-3: 3rem;
$rem-4: 4rem;
$rem-5: 5rem;
$rem-6: 6rem;
$rem-7: 7rem;
$rem-8: 8rem;
$rem-9: 9rem;
$rem-10: 10rem;

// bootstrap
@import "bootstrap/scss/functions";
@import "bootstrap/scss/variables";
@import "bootstrap/scss/variables-dark";
@import "bootstrap/scss/maps";
@import "bootstrap/scss/mixins";
@import "bootstrap/scss/utilities";

$tooltip-max-width: 300px;

